Tutorial-GiRaFFE_Higher_Order: add some comments

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -60,9 +60,9 @@
     "* $u^\\mu$:\n",
     "\n",
     "Our ultimate goal here will be to code the evolution equation (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)):\n",
-    "\\begin{equation}\n",
-    "\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu},\n",
-    "\\end{equation}\n",
+    "$$\n",
+    "\\boxed{\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}},\n",
+    "$$\n",
     "where the densitized spatial Poynting flux one-form $\\tilde{S}_i = \\sqrt{\\gamma} S_i$ (and $S_i$ comes from $S_{\\mu} -n_{\\nu} T^{\\nu}_{{\\rm EM} \\mu}$) and\n",
     "\\begin{align}\n",
     "T^{\\mu \\nu}_{\\rm EM} &= b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}, \\\\\n",
@@ -70,7 +70,8 @@
     "\\sqrt{4\\pi} b^i &= B^i_{\\rm (u)} = \\frac{B^i + (u_j B^j) u^i}{\\alpha u^0}, \\\\\n",
     "\\end{align}\n",
     "and \n",
-    "$$B^i = \\frac{\\tilde{B}^i}{\\sqrt{\\gamma}}.$$\n",
+    "$$\n",
+    " B^i = \\frac{\\tilde{B}^i}{\\sqrt{\\gamma}}.$$\n",
     "Most of these are computed in the module u0_smallb_Poynting__Cartesian.py, and we will import that module to save effort.\n",
     "Furthermore, the four-metric $g_{\\mu\\nu}$ is related to the three-metric $\\gamma_{ij}$, index-lowered shift $\\beta_i$, and lapse $\\alpha$ by\n",
     "$$\n",
