ScalarWave tutorial modules: Change the initial condition to sin(kx - ct) + 2, so that the exact solution never passes through zero, where the relative error would be undefined.

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -415,7 +415,11 @@
     "\n",
     "The solution to the scalar wave equation for a monochromatic (single-wavelength) wave traveling in the $\\hat{k}$ direction is\n",
     "$$u(\\vec{x},t) = f(\\hat{k}\\cdot\\vec{x} - c t),$$\n",
-    "where $\\hat{k}$ is a unit vector."
+    "where $\\hat{k}$ is a unit vector. We choose $f(\\hat{k}\\cdot\\vec{x} - c t)$ to take the form\n",
+    "$$\n",
+    "f(\\hat{k}\\cdot\\vec{x} - c t) = \\sin\\left(\\hat{k}\\cdot\\vec{x} - c t\\right) + 2,\n",
+    "$$\n",
+    "where we add the $+2$ to ensure that the exact solution never crosses through zero. In places where the exact solution passes through zero, the relative error (i.e., the measure of error to compare numerical with exact results) is undefined. Also, $f(\\hat{k}\\cdot\\vec{x} - c t)$ plus a constant is still a solution to the wave equation."
    ]
   },
   {
@@ -441,7 +445,7 @@
     "dot_product /= kk_norm\n",
     "\n",
     "# Step 5: Set initial data for uu and vv, where vv_ID = \\partial_t uu_ID.\n",
-    "uu_ID = sp.sin(dot_product - wavespeed*time)\n",
+    "uu_ID = sp.sin(dot_product - wavespeed*time)+2\n",
     "vv_ID = sp.diff(uu_ID, time)"
    ]
   },
