Tutorial-Start_to_Finish-*: Fix copy/pasted typo

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -122,7 +122,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 33.6491529942 seconds.\n"
+      "Finished in 38.3228371143 seconds.\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 9.86481285095 seconds.\n"
+      "Finished in 10.5922379494 seconds.\n"
      ]
     }
    ],
@@ -776,7 +776,7 @@
     "#include \"time.h\"\n",
     "\n",
     "// Step P2: Add needed #define's to set data type, the IDX4() macro, and the gridfunctions\n",
-    "// Step P2a: set REAL=double, so that all gridfunctions are set to \n",
+    "// Step P2a: set REAL=double, so that all floating point numbers are stored to at least ~16 significant digits.\n",
     "#define REAL double\n",
     "\n",
     "// Step P3: Set free parameters\n",
@@ -1091,13 +1091,13 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 7.75307416916 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
+      "Finished in 7.44676303864 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1822.30 | gp/s 5.13e+05\n",
-      "Finished in 14.8517260551 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
+      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1912.30 | gp/s 5.39e+05\n",
+      "Finished in 14.1512868404 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 589.41 | gp/s 5.25e+05\n",
-      "Finished in 45.8543241024 seconds.\n"
+      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 608.84 | gp/s 5.42e+05\n",
+      "Finished in 44.3934178352 seconds.\n"
      ]
     }
    ],
