--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -37,7 +37,7 @@
       "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
       "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
       "   /* \n",
-      "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory::\n",
+      "    * NRPy+ Finite Difference Code Generation, Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
       "    */\n",
       "   /*\n",
       "    *  Original SymPy expression:\n",
@@ -112,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing finite_difference_playground.c\n"
+      "Overwriting finite_difference_playground.c\n"
      ]
     }
    ],
