--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -344,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
@@ -416,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -491,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -500,25 +496,26 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[flux[iRho] = rhostar*vU0,\n",
-      " *    flux[ipx] = mi.alpha*mi.gamDDxz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
-      " *    flux[ipy] = mi.alpha*mi.gamDDyz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
-      " *    flux[ipz] = mi.alpha*mi.gamDDzz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
-      " *    flux[ie] = mi.alpha**2*mi.rtDetGamma*(rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaX*p/mi.alpha**2) - rhostar*vU0]\"\n",
+      " *  \"[flux[iRho] = mi.alpha*mi.rtDetGamma*rho*u0*vx,\n",
+      " *    flux[ipx] = mi.alpha*mi.gamDDxz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
+      " *    flux[ipy] = mi.alpha*mi.gamDDyz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
+      " *    flux[ipz] = mi.alpha*mi.gamDDzz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
+      " *    flux[ie] = mi.alpha**2*mi.rtDetGamma*(rho*u0**2*vx*(intE + p/rho + 1.0) + mi.betaX*p/mi.alpha**2) - mi.alpha*mi.rtDetGamma*rho*u0*vx]\"\n",
       " */\n",
       "{\n",
-      "   const double tmp0 = rhostar*vU0;\n",
-      "   const double tmp1 = gamma1 - 1;\n",
-      "   const double tmp2 = vx*(pow(c, 2) + cs2_0*pow(rho/rho_0, tmp1)/tmp1);\n",
-      "   const double tmp3 = pow(mi.alpha, 2);\n",
-      "   const double tmp4 = mi.betaX/tmp3;\n",
-      "   const double tmp5 = mi.gamDDxy*mi.gamDDyz;\n",
-      "   const double tmp6 = mi.alpha*mi.rtDetGamma*(p*(-1.0*mi.betaZ*tmp4 + (-mi.gamDDxz*mi.gamDDyy + tmp5)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*pow(mi.gamDDyz, 2) - pow(mi.gamDDxy, 2)*mi.gamDDzz - pow(mi.gamDDxz, 2)*mi.gamDDyy + 2*mi.gamDDxz*tmp5)) + rho*tmp2*pow(u0, 2)*vz);\n",
-      "   flux[iRho] = tmp0;\n",
-      "   flux[ipx] = mi.gamDDxz*tmp6;\n",
-      "   flux[ipy] = mi.gamDDyz*tmp6;\n",
-      "   flux[ipz] = mi.gamDDzz*tmp6;\n",
-      "   flux[ie] = mi.rtDetGamma*tmp3*(p*tmp4 + rhostar*tmp2*u0/(mi.alpha*mi.rtDetGamma)) - tmp0;\n",
+      "   const double tmp0 = mi.alpha*mi.rtDetGamma;\n",
+      "   const double tmp1 = rho*vx;\n",
+      "   const double tmp2 = tmp0*tmp1*u0;\n",
+      "   const double tmp3 = tmp1*pow(u0, 2)*(intE + p/rho + 1.0);\n",
+      "   const double tmp4 = pow(mi.alpha, 2);\n",
+      "   const double tmp5 = mi.betaX/tmp4;\n",
+      "   const double tmp6 = mi.gamDDxy*mi.gamDDyz;\n",
+      "   const double tmp7 = tmp0*(p*(-1.0*mi.betaZ*tmp5 + (-mi.gamDDxz*mi.gamDDyy + tmp6)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*pow(mi.gamDDyz, 2) - pow(mi.gamDDxy, 2)*mi.gamDDzz - pow(mi.gamDDxz, 2)*mi.gamDDyy + 2*mi.gamDDxz*tmp6)) + tmp3*vz);\n",
+      "   flux[iRho] = tmp2;\n",
+      "   flux[ipx] = mi.gamDDxz*tmp7;\n",
+      "   flux[ipy] = mi.gamDDyz*tmp7;\n",
+      "   flux[ipz] = mi.gamDDzz*tmp7;\n",
+      "   flux[ie] = mi.rtDetGamma*tmp4*(p*tmp5 + tmp3) - tmp2;\n",
       "}\n",
       "\n"
      ]
@@ -567,7 +564,7 @@
    "source": [
     "## Rotation\n",
     "\n",
-    "One of the key ideas behind the moving-mesh idea is that we must rotate the vector to the appropriate direction such that the Riemann solve is along the x-direction.  This is done by computing the normal vector also the \"x-direction\" and two normal vectors orthogonal to it.  In MANGA they are labeled $n_0, n_1, and n_2$.  And the rotation matrix looks like\n",
+    "One of the key ideas behind the moving-mesh idea is that we must rotate the vector to the appropriate direction such that the Riemann solve is along the x-direction.  This is done by computing the normal vector also the \"x-direction\" and two normal vectors orthogonal to it.  In MANGA they are labeled $n_0$, $n_1$, and $n_2$.  And the rotation matrix looks like\n",
     "\\begin{equation}\n",
     "R = \\begin{pmatrix}\n",
     "n_{0,x} & n_{0,y} & n_{0,z} \\\\\n",
@@ -609,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -632,23 +629,18 @@
       "\n",
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[Tmunu00 = 1.0*p/mi.alpha**2 + 1.0*rhostar**2*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha**2*mi.rtDetGamma**2*rho),\n",
-      " *    Tmunu12 = n0[0]*(1.0*rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaX*p/mi.alpha**2) + n0[1]*(1.0*rhostar*u0*vy*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaY*p/mi.alpha**2) + n0[2]*(1.0*rhostar*u0*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaZ*p/mi.alpha**2),\n",
-      " *    Tmunu21 = 1.0*n0[0]*(rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaX*p/mi.alpha**2) + 1.0*n0[1]*(rhostar*u0*vy*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaY*p/mi.alpha**2) + 1.0*n0[2]*(rhostar*u0*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaZ*p/mi.alpha**2)]\"\n",
+      " *  \"[Tmunu00 = 1.0*rho*u0**2*(intE + p/rho + 1.0) + 1.0*p/mi.alpha**2,\n",
+      " *    Tmunu12 = n0[0]*(1.0*rho*u0**2*vx*(intE + p/rho + 1.0) + 1.0*mi.betaX*p/mi.alpha**2) + n0[1]*(1.0*rho*u0**2*vy*(intE + p/rho + 1.0) + 1.0*mi.betaY*p/mi.alpha**2) + n0[2]*(1.0*rho*u0**2*vz*(intE + p/rho + 1.0) + 1.0*mi.betaZ*p/mi.alpha**2),\n",
+      " *    Tmunu21 = 1.0*n0[0]*(rho*u0**2*vx*(intE + p/rho + 1.0) + mi.betaX*p/mi.alpha**2) + 1.0*n0[1]*(rho*u0**2*vy*(intE + p/rho + 1.0) + mi.betaY*p/mi.alpha**2) + 1.0*n0[2]*(rho*u0**2*vz*(intE + p/rho + 1.0) + mi.betaZ*p/mi.alpha**2)]\"\n",
       " */\n",
       "{\n",
-      "   const double tmp0 = pow(mi.alpha, -2);\n",
-      "   const double tmp1 = p*tmp0;\n",
-      "   const double tmp2 = 1.0*tmp1;\n",
-      "   const double tmp3 = gamma1 - 1;\n",
-      "   const double tmp4 = pow(c, 2) + cs2_0*pow(rho/rho_0, tmp3)/tmp3;\n",
-      "   const double tmp5 = rhostar*tmp4*u0/(mi.alpha*mi.rtDetGamma);\n",
-      "   const double tmp6 = tmp5*vx;\n",
-      "   const double tmp7 = tmp5*vy;\n",
-      "   const double tmp8 = tmp5*vz;\n",
-      "   Tmunu00 = tmp2 + 1.0*pow(rhostar, 2)*tmp0*tmp4/(pow(mi.rtDetGamma, 2)*rho);\n",
-      "   Tmunu12 = n0[0]*(mi.betaX*tmp2 + 1.0*tmp6) + n0[1]*(mi.betaY*tmp2 + 1.0*tmp7) + n0[2]*(mi.betaZ*tmp2 + 1.0*tmp8);\n",
-      "   Tmunu21 = 1.0*n0[0]*(mi.betaX*tmp1 + tmp6) + 1.0*n0[1]*(mi.betaY*tmp1 + tmp7) + 1.0*n0[2]*(mi.betaZ*tmp1 + tmp8);\n",
+      "   const double tmp0 = p/pow(mi.alpha, 2);\n",
+      "   const double tmp1 = 1.0*tmp0;\n",
+      "   const double tmp2 = rho*pow(u0, 2)*(intE + p/rho + 1.0);\n",
+      "   const double tmp3 = 1.0*tmp2;\n",
+      "   Tmunu00 = tmp1 + tmp3;\n",
+      "   Tmunu12 = n0[0]*(mi.betaX*tmp1 + tmp3*vx) + n0[1]*(mi.betaY*tmp1 + tmp3*vy) + n0[2]*(mi.betaZ*tmp1 + tmp3*vz);\n",
+      "   Tmunu21 = 1.0*n0[0]*(mi.betaX*tmp0 + tmp2*vx) + 1.0*n0[1]*(mi.betaY*tmp0 + tmp2*vy) + 1.0*n0[2]*(mi.betaZ*tmp0 + tmp2*vz);\n",
       "}\n",
       "\n"
      ]
@@ -768,20 +760,20 @@
       " *  \"rootRho = con[iSx]**2*mi.gamDDxx + 2*con[iSx]*con[iSy]*mi.gamDDxy + 2*con[iSx]*con[iSz]*mi.gamDDxz + con[iSy]**2*mi.gamDDyy + 2*con[iSy]*con[iSz]*mi.gamDDyz + con[iSz]**2*mi.gamDDzz + mi.alpha**2*mi.rtDetGamma**2*rho**2*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2 + rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2*(-mi.alpha**2 + mi.betaX**2*mi.gamDDxx + 2*mi.betaX*mi.betaY*mi.gamDDxy + 2*mi.betaX*mi.betaZ*mi.gamDDxz + mi.betaY**2*mi.gamDDyy + 2*mi.betaY*mi.betaZ*mi.gamDDyz + mi.betaZ**2*mi.gamDDzz) + rhostar*(2*c**2 + 2*cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))*(con[iSx]*mi.betaX*mi.gamDDxx + con[iSx]*mi.betaY*mi.gamDDxy + con[iSx]*mi.betaZ*mi.gamDDxz + con[iSy]*mi.betaX*mi.gamDDxy + con[iSy]*mi.betaY*mi.gamDDyy + con[iSy]*mi.betaZ*mi.gamDDyz + con[iSz]*mi.betaX*mi.gamDDxz + con[iSz]*mi.betaY*mi.gamDDyz + con[iSz]*mi.betaZ*mi.gamDDzz)\"\n",
       " */\n",
       "{\n",
-      "   const double tmp0 = con[iSx]*mi.gamDDxy;\n",
-      "   const double tmp1 = 2*con[iSz];\n",
-      "   const double tmp2 = con[iSx]*mi.gamDDxz;\n",
-      "   const double tmp3 = con[iSy]*mi.gamDDyz;\n",
+      "   const double tmp0 = con[iSy]*mi.gamDDxy;\n",
+      "   const double tmp1 = 2*con[iSx];\n",
+      "   const double tmp2 = con[iSz]*mi.gamDDxz;\n",
+      "   const double tmp3 = con[iSz]*mi.gamDDyz;\n",
       "   const double tmp4 = pow(mi.alpha, 2);\n",
       "   const double tmp5 = pow(c, 2);\n",
       "   const double tmp6 = gamma1 - 1;\n",
       "   const double tmp7 = cs2_0*pow(rho/rho_0, tmp6)/tmp6;\n",
       "   const double tmp8 = pow(tmp5 + tmp7, 2);\n",
-      "   const double tmp9 = mi.betaX*mi.gamDDxy;\n",
-      "   const double tmp10 = 2*mi.betaZ;\n",
-      "   const double tmp11 = mi.betaX*mi.gamDDxz;\n",
-      "   const double tmp12 = mi.betaY*mi.gamDDyz;\n",
-      "   rootRho = pow(con[iSx], 2)*mi.gamDDxx + pow(con[iSy], 2)*mi.gamDDyy + 2*con[iSy]*tmp0 + pow(con[iSz], 2)*mi.gamDDzz + pow(mi.rtDetGamma, 2)*pow(rho, 2)*tmp4*tmp8 + rhostar*tmp8*(pow(mi.betaX, 2)*mi.gamDDxx + pow(mi.betaY, 2)*mi.gamDDyy + 2*mi.betaY*tmp9 + pow(mi.betaZ, 2)*mi.gamDDzz + tmp10*tmp11 + tmp10*tmp12 - tmp4) + rhostar*(2*tmp5 + 2*tmp7)*(con[iSx]*mi.betaX*mi.gamDDxx + con[iSy]*mi.betaY*mi.gamDDyy + con[iSy]*tmp9 + con[iSz]*mi.betaZ*mi.gamDDzz + con[iSz]*tmp11 + con[iSz]*tmp12 + mi.betaY*tmp0 + mi.betaZ*tmp2 + mi.betaZ*tmp3) + tmp1*tmp2 + tmp1*tmp3;\n",
+      "   const double tmp9 = mi.betaY*mi.gamDDxy;\n",
+      "   const double tmp10 = 2*mi.betaX;\n",
+      "   const double tmp11 = mi.betaZ*mi.gamDDxz;\n",
+      "   const double tmp12 = mi.betaZ*mi.gamDDyz;\n",
+      "   rootRho = pow(con[iSx], 2)*mi.gamDDxx + pow(con[iSy], 2)*mi.gamDDyy + 2*con[iSy]*tmp3 + pow(con[iSz], 2)*mi.gamDDzz + pow(mi.rtDetGamma, 2)*pow(rho, 2)*tmp4*tmp8 + rhostar*tmp8*(pow(mi.betaX, 2)*mi.gamDDxx + pow(mi.betaY, 2)*mi.gamDDyy + 2*mi.betaY*tmp12 + pow(mi.betaZ, 2)*mi.gamDDzz + tmp10*tmp11 + tmp10*tmp9 - tmp4) + rhostar*(2*tmp5 + 2*tmp7)*(con[iSx]*mi.betaX*mi.gamDDxx + con[iSx]*tmp11 + con[iSx]*tmp9 + con[iSy]*mi.betaY*mi.gamDDyy + con[iSy]*tmp12 + con[iSz]*mi.betaZ*mi.gamDDzz + mi.betaX*tmp0 + mi.betaX*tmp2 + mi.betaY*tmp3) + tmp0*tmp1 + tmp1*tmp2;\n",
       "}\n",
       "\n"
      ]
@@ -886,9 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -909,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   },
   "nteract": {
    "version": "nteract-on-jupyter@1.9.7"
