--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -316,11 +316,29 @@
     "    }\n",
     "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,evol_gfs);\n",
     "\n",
-    "    /* Step 3: Output relative error between numerical and exact solution, */\n",
+    "    /* Step 3: Validation: Output relative error between numerical and exact solution, */\n",
+    "    exact_solution(Nxx_plus_2NGHOSTS,(n+1)*dt, xx, k1_gfs);\n",
+    "    if(n % 10 == 0) {\n",
+    "       char filename[100];\n",
+    "        sprintf(filename,\"out2D__resolution_%dx%dx%d__iter_%d.txt\",Nxx[0],Nxx[1],Nxx[2],n);\n",
+    "        FILE *out2D = fopen(filename, \"w\");\n",
+    "        for(int i0=0;i0<Nxx[0]+2*NGHOSTS;i0++) {\n",
+    "            for(int i1=0;i1<Nxx[1]+2*NGHOSTS;i1++) {\n",
+    "                if(i0> (Nxx[0]+2*NGHOSTS)*.25 && i0< (Nxx[0]+2*NGHOSTS)*.75 &&\n",
+    "                   i1> (Nxx[1]+2*NGHOSTS)*.25 && i1< (Nxx[1]+2*NGHOSTS)*.75) { \n",
+    "                    REAL xx0 = xx[0][i0];\n",
+    "                    REAL xx1 = xx[1][i1];\n",
+    "                    fprintf(out2D,\"%e %e %e %e\\n\", xx0,xx1,\n",
+    "                            evol_gfs[IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))],\n",
+    "                            k1_gfs[  IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))]);\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        fclose(out2D);\n",
+    "    }\n",
     "    const int i0mid=Nxx_plus_2NGHOSTS[0]/2;\n",
     "    const int i1mid=Nxx_plus_2NGHOSTS[1]/2;\n",
     "    const int i2mid=Nxx_plus_2NGHOSTS[2]/2;\n",
-    "    exact_solution(Nxx_plus_2NGHOSTS,(n+1)*dt, xx, k1_gfs);\n",
     "    const REAL exact     = k1_gfs[IDX4(0,i0mid,i1mid,i2mid)];\n",
     "    const REAL numerical = evol_gfs[IDX4(0,i0mid,i1mid,i2mid)];\n",
     "    const REAL relative_error = fabs((exact-numerical)/exact);\n",
