--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -139,6 +139,8 @@
    "source": [
     "%%writefile -a ScalarWave/ScalarWave_Playground.c\n",
     "\n",
+    "const int NSKIP_2D_OUTPUT = 5;\n",
+    "\n",
     "// Part P1: Import needed header files\n",
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
@@ -167,7 +169,7 @@
     "const REAL kk2 = 1.0;\n",
     "\n",
     "// Part P4: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
-    "void exact_solution(const int Nxx_plus_2NGHOSTS[3],REAL time,REAL *xx[3], REAL *in_gfs) {\n",
+    "void exact_solution(const int Nxx_plus_2NGHOSTS[3],const REAL time,REAL *xx[3], REAL *in_gfs) {\n",
     "#include \"ScalarWave_ExactSolution.h\"\n",
     "}\n",
     "\n",
@@ -211,6 +213,29 @@
     "      FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
     "    }\n",
     "  }\n",
+    "}\n",
+    "// Part P8: 2D File output routine, for comparing numerical results to exact solution\n",
+    "void output_2D(const int iter,const REAL time, \n",
+    "               const REAL *numerical_gridfunction_data,REAL *gridfunction_to_store_exact, \n",
+    "               const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3]) {\n",
+    "    // Step 2a: Validation: Output to 2D data files numerical and exact solutions\n",
+    "    exact_solution(Nxx_plus_2NGHOSTS,time, xx, gridfunction_to_store_exact);\n",
+    "    char filename[100];\n",
+    "    sprintf(filename,\"out2D__resolution_%dx%dx%d__iter_%d.txt\",Nxx[0],Nxx[1],Nxx[2],iter);\n",
+    "    FILE *out2D = fopen(filename, \"w\");\n",
+    "    for(int i0=0;i0<Nxx[0]+2*NGHOSTS;i0++) {\n",
+    "        for(int i1=0;i1<Nxx[1]+2*NGHOSTS;i1++) {\n",
+    "            if(i0> (Nxx[0]+2*NGHOSTS)*.25 && i0< (Nxx[0]+2*NGHOSTS)*.75 &&\n",
+    "               i1> (Nxx[1]+2*NGHOSTS)*.25 && i1< (Nxx[1]+2*NGHOSTS)*.75) { \n",
+    "                REAL xx0 = xx[0][i0];\n",
+    "                REAL xx1 = xx[1][i1];\n",
+    "                fprintf(out2D,\"%e %e %e %e\\n\", xx0,xx1,\n",
+    "                        numerical_gridfunction_data[IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))],\n",
+    "                        gridfunction_to_store_exact[  IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))]);\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    fclose(out2D);\n",
     "}\n",
     "\n",
     "// main() function:\n",
@@ -272,10 +297,12 @@
     "\n",
     "  // Step 1: Set up initial data to be exact solution at time=0:\n",
     "  exact_solution(Nxx_plus_2NGHOSTS, 0.0, xx, evol_gfs);\n",
+    "  output_2D(0,0.0,evol_gfs,evol_gfs, Nxx, Nxx_plus_2NGHOSTS,xx);\n",
     "\n",
     "  for(int n=0;n<=Nt;n++) { // Main loop to progress forward in time.\n",
-    "    // Step 2: Evolve scalar wave initial data forward in time using Method of Lines with RK4 algorithm,\n",
-    "    //         applying quadratic extrapolation outer boundary conditions.\n",
+    "\n",
+    "    // Step 2b: Evolve scalar wave initial data forward in time using Method of Lines with RK4 algorithm,\n",
+    "    //          applying quadratic extrapolation outer boundary conditions.\n",
     "    /***************************************************/\n",
     "    /* Implement RK4 for Method of Lines timestepping: */\n",
     "    /***************************************************/\n",
@@ -317,25 +344,16 @@
     "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,evol_gfs);\n",
     "\n",
     "    /* Step 3: Validation: Output relative error between numerical and exact solution, */\n",
+    "    // Step 3a: Evaluate exact solution at current time, (n+1)*dt. Store to k1_gfs.\n",
     "    exact_solution(Nxx_plus_2NGHOSTS,(n+1)*dt, xx, k1_gfs);\n",
-    "    if(n % 10 == 0) {\n",
-    "       char filename[100];\n",
-    "        sprintf(filename,\"out2D__resolution_%dx%dx%d__iter_%d.txt\",Nxx[0],Nxx[1],Nxx[2],n);\n",
-    "        FILE *out2D = fopen(filename, \"w\");\n",
-    "        for(int i0=0;i0<Nxx[0]+2*NGHOSTS;i0++) {\n",
-    "            for(int i1=0;i1<Nxx[1]+2*NGHOSTS;i1++) {\n",
-    "                if(i0> (Nxx[0]+2*NGHOSTS)*.25 && i0< (Nxx[0]+2*NGHOSTS)*.75 &&\n",
-    "                   i1> (Nxx[1]+2*NGHOSTS)*.25 && i1< (Nxx[1]+2*NGHOSTS)*.75) { \n",
-    "                    REAL xx0 = xx[0][i0];\n",
-    "                    REAL xx1 = xx[1][i1];\n",
-    "                    fprintf(out2D,\"%e %e %e %e\\n\", xx0,xx1,\n",
-    "                            evol_gfs[IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))],\n",
-    "                            k1_gfs[  IDX4(0,i0,i1, (int)((Nxx[2]+ 2*NGHOSTS)*0.5))]);\n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "        fclose(out2D);\n",
+    "                          \n",
+    "    // Step 3b: Output to 2D grid (region of x-y plane near origin) \n",
+    "    //          every NSKIP_2D_OUTPUT iterations.\n",
+    "    if((n+1)%NSKIP_2D_OUTPUT ==0) {\n",
+    "        output_2D((n+1),(n+1)*dt,evol_gfs,k1_gfs, Nxx, Nxx_plus_2NGHOSTS,xx);\n",
     "    }\n",
+    "\n",
+    "    // Step 3c: Output relative error between exact & numerical at center of grid.\n",
     "    const int i0mid=Nxx_plus_2NGHOSTS[0]/2;\n",
     "    const int i1mid=Nxx_plus_2NGHOSTS[1]/2;\n",
     "    const int i2mid=Nxx_plus_2NGHOSTS[2]/2;\n",
