Tutorial-GiRaFFE_Higher_Order: More LaTeX formatting improvements

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -520,14 +520,14 @@
     "\n",
     "Note that this is in terms of the derivatives of several other quantities:\n",
     "\n",
-    "* $B^i_{,l}$: [Since $b^i$ is itself a function of $B^i$, we will first need the derivatives $B^i_{,l}$](#Bideriv)\n",
-    "* $b^i_{,k}$: [Once we have $B^i_{,l}$ we can evaluate derivatives of $b^i$, $b^i_{,k}$](#bideriv)\n",
-    "* The derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, [$\\left(b^2\\right)_{,j}$](#b2deriv).\n",
-    "* Derivatives of $g^{ij}$, [$g^{ij}_{\\ k}$](#gupijderiv)\n",
-    "* Putting it together: [$\\partial_j T^{j}_{{\\rm EM} i}$](#alltogether)\n",
-    "    * Putting it together: [Term 1](#alltogether1)\n",
-    "    * Putting it together: [Term 2](#alltogether2)\n",
-    "    * Putting it together: [Term 3](#alltogether3)\n",
+    "* $B^i_{,l}$: Since $b^i$ is itself a function of $B^i$, we will first need the derivatives $B^i_{,l}$: [Link to section](#capitalBideriv)\n",
+    "* $b^i_{,k}$: Once we have $B^i_{,l}$ we can evaluate derivatives of $b^i$, $b^i_{,k}$: [Link to section](#bideriv)\n",
+    "* The derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, $\\left(b^2\\right)_{,j}$: [Link to section](#b2deriv).\n",
+    "* Derivatives of $g^{ij}$, $g^{ij}_{\\ k}$ [Link to section](#gupijderiv)\n",
+    "* Putting it together: $\\partial_j T^{j}_{{\\rm EM} i}$: [Link to section](#alltogether)\n",
+    "    * Putting it together: Term 1: [Link to section](#alltogether1)\n",
+    "    * Putting it together: Term 2: [Link to section](#alltogether2)\n",
+    "    * Putting it together: Term 3: [Link to section](#alltogether3)\n",
     "\n",
     "\\begin{align}\n",
     "%u^i_{,j} &= u^0_{,j} (\\alpha v^i_{(n)} - \\beta^i) + u^0 (\\alpha_{,j} v^i_{(n)} + \\alpha v^i_{(n),j} - \\beta^i_{,j}) \\\\\n",
@@ -541,10 +541,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Bideriv'></a>\n",
+    "<a id='capitalBideriv'></a>\n",
     "\n",
     "## Derivatives of $B^i$\n",
-    "$$\\label{Bideriv}$$\n",
+    "\n",
+    "$$\\label{capitalbideriv}$$\n",
     "\n",
     "\\[Back to the [list of derivatives](#table2)\\]\n",
     "\n",
@@ -1223,24 +1224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 108973 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\r\n"
      ]
     }
    ],
