--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -10,22 +10,21 @@
     "# $\\texttt{GiRaFFE}$: General Relativistic Force-Free Electrodynamics\n",
     "$$\\label{top}$$\n",
     "\n",
-    "## Porting the original $\\texttt{GiRaFFE}$ code to NRPy+\n",
+    "**Authors: Patrick Nelson, Zachariah Etienne, and Maria Babiuc-Hamilton**\n",
     "\n",
-    "Porting the original $\\texttt{GiRaFFE}$ code, as presented in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), to NRPy+ will generally make it easier to maintain, as well as to make changes. Specifically, it will make it nearly trivial to increase the finite-differencing order.\n",
+    "## A new version of $\\texttt{GiRaFFE}$, using NRPy+\n",
     "\n",
-    "Our ultimate goal here will be to code the evolution equations (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)):\n",
+    "The original $\\texttt{GiRaFFE}$ code, as presented in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), exists as a significant modification to $\\texttt{IllinoisGRMHD}$. As such, it used a third-order reconstruction algorithm with a slope limiter (Colella et al's piecewise parabolic method, or PPM) to handle derivatives. However the equations of general relativistic force-free electrodynamics (GRFFE) do not generally permit shocks, so a more optimal approach would involve finite differencing all derivatives in the GRFFE equations. As it happens, NRPy+ was designed to generate C codes involving complex tensorial expressions and finite difference derivatives, with finite-differencing order a freely-specifiable parameter.\n",
+    "\n",
+    "The purpose of this notebook is to rewrite the equations of GRFFE as used in the original $\\texttt{GiRaFFE}$ code so that all derivatives that appear are represented numerically as finite difference derivatives. As we will see, the largest complication stems from derivatives of magnetic fields--requiring judicious application of the chain and product rules.\n",
+    "\n",
+    "The GRFFE evolution equations (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)) we wish to encode in the NRPy+ version of $\\texttt{GiRaFFE}$ are as follows:\n",
     "\n",
     "* $\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$: [Link to Step 3.0](#step7)\n",
     "* $\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j)$: [Link to Step 4.0](#step8)\n",
     "* $\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]$: [Link to Step 4.0](#step8)\n",
     "\n",
-    "where the densitized spatial Poynting flux one-form $\\tilde{S}_i = \\sqrt{\\gamma} S_i$ (and $S_i$ comes from $S_{\\mu} -n_{\\nu} T^{\\nu}_{{\\rm EM} \\mu}$), and $(\\Phi, A_i)$ is the potential.\n",
-    "\n",
-    "We will begin this tutorial in the usual way: import the core NRPy+ modules that we need, set the dimensionality of the grid with parameter $\\text{grid::DIM}$, and declare the basic gridfunctions in Part 1: Preliminaries [(Link)](#preliminaries). We will then set $T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}$ and derive and set the related quantities $\\partial_j  T^{j}_{{\\rm EM} i}$ in Part 2: $T^{\\mu\\nu}_{\\rm EM}$ and its derivatives [(Link)](#step4). Then, in Part 3: Evolution equation for $\\tilde{S}_i$ [(Link)](#step7), we will use the previously constructed quantities to build the right hand side for the time-evolution equation $$\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}.$$ After that, we will construct the evolution equations for the other quantities in Part 4: Evolution equations for $A_i$ and $\\Phi$ [(Link)](#step8)\n",
-    "$$\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j)$$ and\n",
-    "$$\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi].$$\n",
-    "Finally, in Part 5: Setting the initial $\\tilde{S}_i$ from initial data [(Link)](#step9), we will build the expression $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$ This will be needed to set initial data for $\\tilde{S}_i$ from the initial data defined in the module [Tutorial-GiRaFFEfood_HO.ipynb](Tutorial-GiRaFFEfood_HO.ipynb)\n",
+    "Here, the densitized spatial Poynting flux one-form $\\tilde{S}_i = \\sqrt{\\gamma} S_i$ (and $S_i$ comes from $S_{\\mu} -n_{\\nu} T^{\\nu}_{{\\rm EM} \\mu}$), and $(\\Phi, A_i)$ is the potential.\n",
     "\n",
     "### A Note on Notation\n",
     "\n",
@@ -35,17 +34,19 @@
     "\n",
     "1. Preliminaries\n",
     "    1. [Steps 1.0-1.2](#steps0to2): Set up the basic NRPy+ infrastructure we need \n",
+    "        * This part imports the core NRPy+ modules that we need, sets the dimensionality of the grid with parameter $\\text{grid::DIM}$, and declares the basic gridfunctions\n",
     "    1. [Step 1.3](#step3): Build the spatial derivatives of the four metric\n",
     "1. $T^{\\mu\\nu}_{\\rm EM}$ and its derivatives\n",
     "    1. [Step 2.0](#step4): $u^i$ and $b^i$ and related quantities\n",
     "    1. [Step 2.1](#step5): Construct the electromagnetic stress-energy tensor\n",
     "    1. [Step 2.2](#step6): Derivatives of the electromagnetic stress-energy tensor\n",
-    "1. Evolution equation for $\\tilde{S}_i$\n",
+    "1. Evolution equation for $\\tilde{S}_i$ (depends on quantities defined in previous steps)\n",
     "    1. [Step 3.0](#step7): Construct the evolution equation for $\\tilde{S}_i$\n",
-    "1. Evolution equations for $A_i$ and $\\Phi$\n",
+    "1. Evolution equations for $A_i$ and $\\Phi$ (depends on quantities defined in previous steps)\n",
     "    1. [Step 4.0](#step8): Construct the evolution equations for $A_i$ and $\\sqrt{\\gamma}\\Phi$\n",
     "1. Setting the initial $\\tilde{S}_i$ from initial data\n",
     "    1. [Step 5.0](#step9): Build the expression for $\\tilde{S}_i$\n",
+    "        * Initial data require only that the spatial vector potential $A_i$, the densitized zeroth-component of the vector potential $[\\sqrt{\\gamma}\\Phi$, and the Valencia 3-velocity $v^i_{(n)}$ be set. However, the velocity is not an evolved quantity; $\\tilde{S}_i$ is the evolved quantity. We can set $\\tilde{S}_i$ initially based on the given initial data via $\\tilde{S}_i=\\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}$.\n",
     "1. Code Validation\n",
     "    1. [Step 6.0](#step10): NRPy+ Module Code Validation"
    ]
@@ -1220,7 +1221,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 110314 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 112321 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
