Tutorial-GiRaFFE_Higher_Order: Some fixes

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "**Authors: Patrick Nelson, Zachariah Etienne, and Maria Babiuc-Hamilton**\n",
     "\n",
+    "<font color='red'>**This module is under active development -- do *not* use the resulting C code output for doing science.**</font>\n",
+    "\n",
     "## A new version of $\\texttt{GiRaFFE}$, using NRPy+\n",
     "\n",
     "The original $\\texttt{GiRaFFE}$ code, as presented in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), exists as a significant modification to $\\texttt{IllinoisGRMHD}$. As such, it used a third-order reconstruction algorithm with a slope limiter (Colella et al's piecewise parabolic method, or PPM) to handle derivatives. However the equations of general relativistic force-free electrodynamics (GRFFE) do not generally permit shocks, so a more optimal approach would involve finite differencing all derivatives in the GRFFE equations. As it happens, NRPy+ was designed to generate C codes involving complex tensorial expressions and finite difference derivatives, with finite-differencing order a freely-specifiable parameter.\n",
@@ -617,12 +619,12 @@
     "for i in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for j in range(DIM):\n",
-    "            #Term 2.b (More contractions over k): ( u_j B^j u^i ) \\partial_k ( \\alpha u^0 )\n",
+    "            #Term 2.b (More contractions over k): ( u_j B^j u^i ) ( \\alpha u^0 ),k\n",
     "            smallbUdD[i][k] += -(uD[j]*BU[j]*uU[i])*alphau0_dD[k]\n",
     "            \n",
     "for i in range(DIM):\n",
     "    for k in range(DIM):\n",
-    "        # Term Denom requires us to divide the whole expressions through by sqrt(4 pi) * (alpha u^0)^2\n",
+    "        # Term Denom: Divide the numerator by sqrt(4 pi) * (alpha u^0)^2\n",
     "        smallbUdD[i][k] /= sp.sqrt(4*M_PI) * alphau0 * alphau0\n"
    ]
   },
@@ -643,7 +645,7 @@
     "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + g_{\\mu\\nu} b^\\mu_{,j} b^\\nu + g_{\\mu\\nu} b^\\mu b^\\nu_{,j} \\\\\n",
     "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu.\n",
     "\\end{align}\n",
-    "We have already defined the derivatives of the four-metric $g_{\\mu\\nu,j}$; we have also defined the derivatives of spatial components of $b^\\mu$, $b^i_{,k}$. Now, however, we will need  the take derivatives of the temporal component: $b^0_{,j}$. Starting with the definition, and using the quotient rule:\n",
+    "We have already defined the spatial derivatives of the four-metric $g_{\\mu\\nu,j}$ [**Zach says: Add reference to subsection here**](subsection); we have also defined the spatial derivatives of spatial components of $b^\\mu$, $b^i_{,k}$ [**Zach says: Add reference to subsection here**](subsection). Notice the above expression requires spatial derivatives of the *zeroth* component of $b^\\mu$ as well, $b^0_{,j}$, which we will now compute. Starting with the definition, and applying the quotient rule:\n",
     "\\begin{align}\n",
     "b^0 &= \\frac{u_k B^k}{\\sqrt{4\\pi}\\alpha}, \\\\\n",
     "\\rightarrow b^0_{,j} &= \\frac{1}{\\sqrt{4\\pi}} \\frac{\\alpha \\left( u_{k,j} B^k + u_k B^k_{,j} \\right) - u_k B^k \\alpha_{,j}}{\\alpha^2} \\\\\n",
@@ -673,8 +675,22 @@
     "                               - alpha_dD[j]*uD[k]*BU[k]\n",
     "for j in range(DIM):\n",
     "    # Divide through by the denominator: \\sqrt{4\\pi} \\alpha^2\n",
-    "    smallb4UdD[0][j+1] /= sp.sqrt(4*M_PI)*alpha*alpha\n",
-    "\n",
+    "    smallb4UdD[0][j+1] /= sp.sqrt(4*M_PI)*alpha*alpha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, both $b^0_{\\ ,j}$ and $b^i_{\\ ,j}$ have been computed, but one exists inconveniently in the $4\\times 4$ component $\\verb|smallb4UdD[][]|$ and the other in the $3\\times 3$ component $\\verb|smallbUdD[][]|$. So that we can perform full implied sums over $g_{\\mu\\nu} b^\\mu_{,j} b^\\nu$ more conveniently, we will now store all information from $\\verb|smallbUdD[i][j]|$ into $\\verb|smallb4UdD[i+1][j+1]|$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now, we'll fill out the rest of the four-vector with b^i_{,j} that we derived above.\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -685,12 +701,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can calculate $$\\left(b^2\\right)_{,j} = g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu.$$"
+    "Using 4-component (Greek-indexed) quantities, we can now complete our construction of\n",
+    "$$\\left(b^2\\right)_{,j} = g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu:$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,11 +788,7 @@
     "\n",
     "\\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "So, we can now put it all together:\n",
-    "\\begin{align}\n",
-    "\\partial_j  T^{j}_{{\\rm EM} i} &= \\gamma_{ki,j} T^{kj}_{\\rm EM} + \\gamma_{ki} \\left(\\left(b^2\\right)_{,j} u^j u^k + b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{1}{2} \\left(b^2\\right)_{,j} g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j}\\right).\n",
-    "\\end{align}\n",
-    "It should be noted that due to the way our indexing conventions have have fallen, the Python indices for $T^{ij}_{\\rm EM}$, $g^{ij}$, $b^i$ and $b_i$ will need to be incremented to correctly use the spatial components. We will also quickly rearrange the terms of the expression to better mimic the loop structure we will create:\n",
+    "So, we can now put it all together, starting from the expression we derived above in [**Zach says: section**](blah):\n",
     "\\begin{align}\n",
     "\\partial_j  T^{j}_{{\\rm EM} i} =& \\ \n",
     "\\underbrace{\\gamma_{ki,j} T^{kj}_{\\rm EM}}_{\\rm Term\\ 1} \\\\\n",
@@ -795,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,6 +818,7 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
+    "            # Term 1:                \\gamma_{ki,j} T^{kj}_{\\rm EM}\n",
     "            TEMUDdD_contracted[i] += gammaDD_dD[k][i][j] * T4EMUU[k+1][j+1]\n"
    ]
   },
@@ -824,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,6 +981,10 @@
     "with $\\xi$ chosen as a damping factor. \n",
     "\n",
     "### Step 4.0.a: Construct some useful auxiliary gridfunctions for the other evolution equations\n",
+    "\n",
+    "**Zach says: Use underbraces in the above expressions to define PevolParenU\\_dD and AevolParen\\_dD. Defining below is difficult to validate.**\n",
+    "\n",
+    "\n",
     "After declaring a  some needed quantities, we will also define the parenthetical terms that we need to take derivatives of. For $A_i$, we will define $${\\rm AevolParen} = \\alpha \\Phi - \\beta^j A_j$$ and for $[\\sqrt{\\gamma} \\Phi]$, we will define \n",
     "\\begin{align}\n",
     "{\\rm PevolParenU[j]} &= \\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi] \\\\\n",
@@ -976,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,18 +1030,19 @@
    "metadata": {},
    "source": [
     "### Step 4.0.b: Construct the actual evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$\n",
+    "\n",
     "Now to set the evolution equations ([eqs. 17 and 19](https://arxiv.org/pdf/1704.00599.pdf)), recalling that the drift velocity $v^i = u^i/u^0$:\n",
     "\\begin{align}\n",
     "\\partial_t A_i &= \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j) \\\\\n",
     "               &= \\epsilon_{ijk} \\frac{u^j}{u^0} B^k - {\\rm AevolParen\\_dD[i]} \\\\\n",
-    "\\partial_t [\\sqrt{\\gamma} \\Phi] &= -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi] \\\\\n",
+    "\\partial_t [\\sqrt{\\gamma} \\Phi] &= -\\partial_j \\left(\\left(\\alpha\\sqrt{\\gamma}\\right)A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]\\right) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi] \\\\\n",
     "                                &= -{\\rm PevolParenU\\_dD[j][j]} - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]. \\\\\n",
     "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1173,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1200,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 110686 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 111900 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
