Moved StildeD to GiRaFFEfood. Overhauled how four-velocity is handled in GiRaFFE_HO.

--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -20,11 +20,12 @@
     "In the simulations, $B^i$ will be calculated numerically from $A_i$; however, it will be useful to analytically calculate $B^i$ to use calculating the initial $v^i$.\n",
     "\n",
     "#### Table of Contents:\n",
-    "1. [Steps 0-1: Preliminaries](#preliminaries)\n",
-    "1. [Step 2: Set the vectors A and E in Spherical coordinates](#step2)\n",
-    "1. [Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.](#step3)\n",
-    "1. [Step 4: Calculate $v^i$ from $A_i$ and $E_i$](#step4)\n",
-    "1. [Step 5: NRPy+ Module Code Validation](#step5)"
+    "1. [Steps 0-1:](#preliminaries) Preliminaries\n",
+    "1. [Step 2:](#step2) Set the vectors A and E in Spherical coordinates\n",
+    "1. [Step 3:](#step3) Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "1. [Step 4:](#step4) Calculate $v^i$ from $A_i$ and $E_i$\n",
+    "1. [Step 5:](#step5) Build the expression for $\\tilde{S}_i$\n",
+    "1. [Step 6:](#step6) NRPy+ Module Code Validation"
    ]
   },
   {
@@ -32,7 +33,10 @@
    "metadata": {},
    "source": [
     "<a id='preliminaries'></a>\n",
+    "\n",
     "### Steps 0-1: Preliminaries\n",
+    "$$\\label{preliminaries}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
@@ -74,7 +78,10 @@
    "metadata": {},
    "source": [
     "<a id='step2'></a>\n",
+    "\n",
     "### Step 2: Set the vectors A and E in Spherical coordinates\n",
+    "$$\\label{step2}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "We will first build the fundamental vectors $A_i$ and $E_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use reference_metric.py to set $r$ and $\\theta$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. Since $C_0 = 1$,\n",
@@ -114,7 +121,10 @@
    "metadata": {},
    "source": [
     "<a id='step3'></a>\n",
+    "\n",
     "### Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "$$\\label{step3}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian \n",
@@ -151,7 +161,7 @@
     "#dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv() # We don't actually need this in this case.\n",
     "\n",
     "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\")\n",
-    "ED = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ED\")\n",
+    "ED = ixp.zerorank1()\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -173,7 +183,10 @@
    "metadata": {},
    "source": [
     "<a id='step4'></a>\n",
+    "\n",
     "### Step 4: Calculate $v^i$ from $A_i$ and $E_i$\n",
+    "$$\\label{step4}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. "
@@ -252,7 +265,44 @@
    "metadata": {},
    "source": [
     "<a id='step5'></a>\n",
-    "### Step 5: NRPy+ Module Code Validation\n",
+    "\n",
+    "### Step 5.0: Build the expression for $\\tilde{S}_i$\n",
+    "$$\\label{step5}$$\n",
+    "\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "We will now find the densitized Poynting flux given by equation 21 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), $$\\boxed{\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j+\\beta^j)\\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.}$$ This is needed to set initial data for $\\tilde{S}_i$ after $B^i$ is set from the initial $A_i$. Note, however, that this expression uses the drift velocity $v^i = \\alpha v^i_{(n)} - \\beta^i$; substituting this into the definition of $\\tilde{S}_i$ yields an expression in terms of the Valencia velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$\n",
+    "\n",
+    "* Initial data require only that the spatial vector potential $A_i$, the densitized zeroth-component of the vector potential $[\\sqrt{\\gamma}\\Phi]$, and the Valencia 3-velocity $v^i_{(n)}$ be set. However, the velocity is not an evolved quantity; $\\tilde{S}_i$ is the evolved quantity. We can set $\\tilde{S}_i$ initially based on the given initial data via $\\tilde{S}_i=\\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}$.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5: Build the expression for \\tilde{S}_i\n",
+    "StildeD = ixp.zerorank1()\n",
+    "B2 = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
+    "for i in range(DIM):\n",
+    "    StildeD[i] = 0\n",
+    "    for j in range(DIM):\n",
+    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step6'></a>\n",
+    "\n",
+    "### Step 6: NRPy+ Module Code Validation\n",
+    "$$\\label{step6}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
@@ -262,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,15 +330,21 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
+      "Multiplying ASphD[2] by -xx1/(xx0**2 + xx1**2) to set AD[0]\n",
+      "Multiplying ASphD[2] by xx0/(xx0**2 + xx1**2) to set AD[1]\n",
+      "Multiplying ASphD[2] by 0 to set AD[2]\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
       "AD[0] - gfho.AD[0] = 0\n",
+      "StildeD[0] - gfho.StildeD[0] = 0\n",
       "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
       "AD[1] - gfho.AD[1] = 0\n",
+      "StildeD[1] - gfho.StildeD[1] = 0\n",
       "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
-      "AD[2] - gfho.AD[2] = 0\n"
+      "AD[2] - gfho.AD[2] = 0\n",
+      "StildeD[2] - gfho.StildeD[2] = 0\n"
      ]
     }
    ],
@@ -309,7 +365,8 @@
     "for i in range(DIM):\n",
     "\n",
     "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
+    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n",
+    "    print(\"StildeD[\"+str(i)+\"] - gfho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gfho.StildeD[i]))\n"
    ]
   }
  ],
