--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -51,11 +51,8 @@
     "    1. [Step 3.0](#step7): Construct the evolution equation for $\\tilde{S}_i$\n",
     "1. Evolution equations for $A_i$ and $\\Phi$ (depends on quantities defined in previous steps)\n",
     "    1. [Step 4.0](#step8): Construct the evolution equations for $A_i$ and $\\sqrt{\\gamma}\\Phi$\n",
-    "1. Setting the initial $\\tilde{S}_i$ from initial data\n",
-    "    1. [Step 5.0](#step9): Build the expression for $\\tilde{S}_i$\n",
-    "        * Initial data require only that the spatial vector potential $A_i$, the densitized zeroth-component of the vector potential $[\\sqrt{\\gamma}\\Phi]$, and the Valencia 3-velocity $v^i_{(n)}$ be set. However, the velocity is not an evolved quantity; $\\tilde{S}_i$ is the evolved quantity. We can set $\\tilde{S}_i$ initially based on the given initial data via $\\tilde{S}_i=\\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}$.\n",
     "1. Code Validation\n",
-    "    1. [Step 6.0](#step10): NRPy+ Module Code Validation"
+    "    1. [Step 5.0](#step9): NRPy+ Module Code Validation"
    ]
   },
   {
@@ -315,9 +312,9 @@
     "# Step 2.0: u^i, b^i, and related quantities\n",
     "# Step 2.0.a: import the four-velocity, as written in terms of the Valencia 3-velocity\n",
     "uD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"uD\")\n",
-    "uU = ixp.zerorank1()\n",
+    "uU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"uU\")\n",
+    "u4U0 = gri.register_gridfunctions(\"AUX\",\"u4U0\")\n",
     "\n",
-    "u0 = u0b.u0\n",
     "for i in range(DIM):\n",
     "    uD[i] = u0b.uD[i]\n",
     "    uU[i] = u0b.uU[i]"
@@ -377,8 +374,8 @@
    "source": [
     "# Step 2.1: Construct the electromagnetic stress-energy tensor\n",
     "# Step 2.1.a: Set up the four-velocity vector\n",
-    "u4U = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"u4U\",DIM=4)\n",
-    "u4U[0] = u0\n",
+    "u4U = ixp.zerorank1(DIM=4)\n",
+    "u4U[0] = u4U0\n",
     "for i in range(DIM):\n",
     "    u4U[i+1] = uU[i]\n",
     "\n",
@@ -411,7 +408,7 @@
     "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. When confronted with derivatives of complicated expressions, it is generally convenient to declare those expressions as gridfunctions themselves, allowing NRPy+ to take finite-difference derivatives of the expressions. This might even reduce the truncation error associated with the finite differences, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_i$. Thus $B^i$ cannot be *consistently* defined in ghost zones. To potentially reduce numerical errors induced by inconsistent finite differencing, we will differentiate $T^{\\mu\\nu}_{\\rm EM}$ term-by-term so that finite-difference derivatives of $A_i$ appear.\n",
+    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. When confronted with derivatives of complicated expressions, it is generally convenient to declare those expressions as gridfunctions themselves, allowing NRPy+ to take finite-difference derivatives of the expressions. This can even reduce the truncation error associated with the finite differences, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_i$. Thus $B^i$ cannot be *consistently* defined in ghost zones. To potentially reduce numerical errors induced by inconsistent finite differencing, we will differentiate $T^{\\mu\\nu}_{\\rm EM}$ term-by-term so that finite-difference derivatives of $A_i$ appear.\n",
     "\n",
     "We will now now take these spatial derivatives of $T^{\\mu\\nu}_{\\rm EM}$, applying the chain rule until it is only in terms of basic gridfunctions and their derivatives: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_i$, and the four-velocity $u^i$. Along the way, we will also set up useful temporary variables representing the steps of the chain rule. (Notably, *all* of these quantities will be written in terms of $A_i$ and its derivatives):\n",
     "\n",
@@ -489,6 +486,7 @@
     "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right)  \\\\\n",
     "         &= [ijk] \\partial_l \\left( \\frac{1}{\\sqrt{\\gamma}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
     "         &= [ijk]\\left(-\\frac{\\gamma_{,l}}{2\\gamma^{3/2}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
+    "         &= -\\frac{\\gamma_{,l}}{2\\gamma} \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right) + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
     "\\end{align}\n",
     "Now, we will substitute back in for the definition of the Levi-Civita tensor: $\\epsilon^{ijk} = [ijk] / \\sqrt{\\gamma}$. Then we will substitute the magnetic field $B^i$ back in.\n",
     "\\begin{align}\n",
@@ -589,7 +587,7 @@
    "outputs": [],
    "source": [
     "alphau0 = gri.register_gridfunctions(\"AUX\",\"alphau0\")\n",
-    "alphau0 = alpha * u0\n",
+    "alphau0 = alpha * u4U0\n",
     "alphau0_dD = ixp.declarerank1(\"alphau0_dD\")\n",
     "uU_dD = ixp.declarerank2(\"uU_dD\",\"nosym\")\n",
     "uD_dD = ixp.declarerank2(\"uD_dD\",\"nosym\")\n",
@@ -729,7 +727,7 @@
     "\n",
     "\\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "We will need derivatives of the inverse four-metric, as well. Let us begin with $g^{00}$: since $g^{00} = -1/\\alpha^2$ ([Gourgoulhon, eq. 4.49](https://arxiv.org/pdf/gr-qc/0703035.pdf)), $$g^{00}_{\\ ,k} = \\frac{\\alpha_{,k}}{\\alpha^3}$$\n"
+    "We will need derivatives of the inverse four-metric, as well. Let us begin with $g^{00}$: since $g^{00} = -1/\\alpha^2$ ([Gourgoulhon, eq. 4.49](https://arxiv.org/pdf/gr-qc/0703035.pdf)), $$g^{00}_{\\ ,k} = \\frac{2 \\alpha_{,k}}{\\alpha^3}$$\n"
    ]
   },
   {
@@ -742,8 +740,8 @@
     "g4UUdD = ixp.zerorank3(DIM=4)\n",
     "\n",
     "for k in range(DIM):\n",
-    "    # \\alpha_{,k} / \\alpha^3\n",
-    "    g4UUdD[0][0][k+1] = alpha_dD[k]/alpha**3"
+    "    # 2 \\alpha_{,k} / \\alpha^3\n",
+    "    g4UUdD[0][0][k+1] = 2*alpha_dD[k]/alpha**3"
    ]
   },
   {
@@ -864,7 +862,16 @@
     "    for j in range(DIM):\n",
     "        for mu in range(4):\n",
     "            # Term 1:                g_{\\mu i,j} T^{\\mu j}_{\\rm EM}\n",
-    "            TEMUDdD_contracted[i] += g4DDdD[mu][i+1][j+1] * T4EMUU[mu][j+1]\n"
+    "            TEMUDdD_contracted[i] += g4DDdD[mu][i+1][j+1] * T4EMUU[mu][j+1]\n",
+    "\n",
+    "# We'll need derivatives of u4U for the next part: \n",
+    "u4UdD = ixp.zerorank2(DIM=4)\n",
+    "u4U0_dD = ixp.declarerank1(\"u4U0_dD\") # Note that derivatives can't be done in 4-D with the current version of NRPy\n",
+    "for i in range(DIM):\n",
+    "    u4UdD[0][i+1] = u4U0_dD[i]\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        u4UdD[i+1][j+1] = uU_dD[i][j]\n"
    ]
   },
   {
@@ -883,12 +890,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We'll need derivatives of u4U\n",
-    "u4U_dD = ixp.declarerank2(\"u4U_dD\",\"nosym\",DIM=4)\n",
     "# Step 2.2.e.ii\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -900,7 +905,7 @@
     "    for j in range(DIM):\n",
     "        for mu in range(4):\n",
     "            # Term 2b: g_{\\mu i} b^2 u^j u^\\mu_{,j}\n",
-    "            TEMUDdD_contracted[i] += g4DD[mu][i+1]*smallb2*uU[j]*u4U_dD[mu][j+1]\n",
+    "            TEMUDdD_contracted[i] += g4DD[mu][i+1]*smallb2*uU[j]*u4UdD[mu][j+1]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -937,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1099,7 @@
     "    A_rhsD[i] = -AevolParen_dD[i]\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            A_rhsD[i] += LeviCivitaTensorDDD[i][j][k]*(uU[j]/u0)*BU[k]\n",
+    "            A_rhsD[i] += LeviCivitaTensorDDD[i][j][k]*(uU[j]/u4U0)*BU[k]\n",
     "            \n",
     "psi6Phi_rhs = -xi*alpha*psi6Phi\n",
     "for j in range(DIM):\n",
@@ -1105,43 +1110,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<a id='step9'></a>\n",
     "\n",
-    "# Step 5.0: Build the expression for $\\tilde{S}_i$\n",
+    "# Step 5.0: NRPy+ Module Code Validation\n",
     "$$\\label{step9}$$\n",
-    "\n",
-    "\\[Back to [top](#top)\\]\n",
-    "\n",
-    "We will now find the densitized Poynting flux given by equation 21 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf), $$\\boxed{\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j+\\beta^j)\\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.}$$ This is needed to set initial data for $\\tilde{S}_i$ after $B^i$ is set from the initial $A_i$. Note, however, that this expression uses the drift velocity $v^i = \\alpha v^i_{(n)} - \\beta^i$; substituting this into the definition of $\\tilde{S}_i$ yields an expression in terms of the Valencia velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 5.0: Build the expression for \\tilde{S}_i\n",
-    "StildeD = ixp.zerorank1()\n",
-    "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
-    "for i in range(DIM):\n",
-    "    StildeD[i] = 0\n",
-    "    for j in range(DIM):\n",
-    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<a id='step10'></a>\n",
-    "\n",
-    "# Step 6.0: NRPy+ Module Code Validation\n",
-    "$$\\label{step10}$$\n",
     "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
@@ -1152,11 +1125,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warning below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::xi\n",
+      "^^^ Ignore the minor warning above. ^^^\n",
+      "\n",
+      "Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "alphau0 - gho.alphau0 = 0\n",
+      "alpsqrtgam - gho.alpsqrtgam = 0\n",
+      "AevolParen - gho.AevolParen = 0\n",
+      "psi6Phi_rhs - gho.psi6Phi_rhs = 0\n",
+      "uU[0] - gho.uU[0] = 0\n",
+      "uD[0] - gho.uD[0] = 0\n",
+      "PevolParenU[0] - gho.PevolParenU[0] = 0\n",
+      "Stilde_rhsD[0] - gho.Stilde_rhsD[0] = 0\n",
+      "A_rhsD[0] - gho.A_rhsD[0] = 0\n",
+      "uU[1] - gho.uU[1] = 0\n",
+      "uD[1] - gho.uD[1] = 0\n",
+      "PevolParenU[1] - gho.PevolParenU[1] = 0\n",
+      "Stilde_rhsD[1] - gho.Stilde_rhsD[1] = 0\n",
+      "A_rhsD[1] - gho.A_rhsD[1] = 0\n",
+      "uU[2] - gho.uU[2] = 0\n",
+      "uD[2] - gho.uD[2] = 0\n",
+      "PevolParenU[2] - gho.PevolParenU[2] = 0\n",
+      "Stilde_rhsD[2] - gho.Stilde_rhsD[2] = 0\n",
+      "A_rhsD[2] - gho.A_rhsD[2] = 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Reset the list of gridfunctions, as registering a gridfunction\n",
     "#   twice will spawn an error.\n",
@@ -1176,13 +1184,11 @@
     "print(\"AevolParen - gho.AevolParen = \" + str(AevolParen - gho.AevolParen))\n",
     "print(\"psi6Phi_rhs - gho.psi6Phi_rhs = \" + str(psi6Phi_rhs - gho.psi6Phi_rhs))\n",
     "for i in range(DIM):\n",
-    "\n",
-    "    print(\"uD[\"+str(i)+\"] - gho.uD[\"+str(i)+\"] = \" + str(uD[i] - gho.uD[i]))\n",
     "    print(\"uU[\"+str(i)+\"] - gho.uU[\"+str(i)+\"] = \" + str(uU[i] - gho.uU[i]))\n",
+    "    print(\"uD[\"+str(i)+\"] - gho.uD[\"+str(i)+\"] = \" + str(uD[i] - gho.uD[i]))\n",
     "    print(\"PevolParenU[\"+str(i)+\"] - gho.PevolParenU[\"+str(i)+\"] = \" + str(PevolParenU[i] - gho.PevolParenU[i]))\n",
     "    print(\"Stilde_rhsD[\"+str(i)+\"] - gho.Stilde_rhsD[\"+str(i)+\"] = \" + str(Stilde_rhsD[i] - gho.Stilde_rhsD[i]))\n",
-    "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n",
-    "    print(\"StildeD[\"+str(i)+\"] - gho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gho.StildeD[i]))\n"
+    "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n"
    ]
   },
   {
@@ -1194,9 +1200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
+      "[NbConvertApp] Writing 113447 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFE_Higher_Order.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_Higher_Order.tex\n",
